# chicham.github.io

./: .gitignore  .nojekyll  .pre-commit-config.yaml  _quarto.yml  about.html  about.ipynb  about.qmd  index.html  index.ipynb  index.qmd  index.xml  reqs.in  requirements.txt  robots.txt  search.json  sitemap.xml
.github/workflows/: publish.yml
.quarto/idx/: about.qmd.json  index.qmd.json
.quarto/idx/posts/post-with-code/: index.qmd.json
.quarto/idx/posts/welcome/: index.qmd.json
.quarto/listing/: listing-cache.json
.quarto/xref/: INDEX
_freeze/posts/fine-tune-stablediffusion-xl/fine-tune-stablediffusion-xl/execute-results/: html.json  ipynb.json
posts/: _metadata.yml
posts/fine-tune-stablediffusion-lora/: fine-tune-stablediffusion-lora.html  fine-tune-stablediffusion-lora.ipynb  fine-tune-stablediffusion-lora.qmd  reqs.in  requirements.txt
posts/fine-tune-stablediffusion-xl/: fine-tune-stablediffusion-xl.html  fine-tune-stablediffusion-xl.ipynb  fine-tune-stablediffusion-xl.qmd
posts/post-with-code/: index.html  index.ipynb  index.qmd
posts/sharding-with-jax/: pyproject.toml  reqs.in  requirements-cpu.txt  requirements-tpu.txt  requirements.txt  sharding_jax.html  sharding_jax.ipynb  sharding_jax.out.ipynb  sharding_jax.py  sharding_jax.qmd
posts/sharding-with-jax/.jupyter_cache/: global.db
posts/sharding-with-jax/.jupyter_cache/executed/2b0374fc44b8c08b454087739f969b1e/: base.ipynb
posts/sharding-with-jax/.jupyter_cache/executed/52d4e230e23ab43904452454ae178786/: base.ipynb
posts/welcome/: index.html
site_libs/bootstrap/: bootstrap.min.css
(+4 files in other folders)
