[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "shard_with_jax"
requires-python = ">=3.10"
dynamic = ["version"]

dependencies =  [
  "keras>=3.0.0",
  "tf-nightly-cpu==2.16.0.dev20231130",
  "tensorboard_plugin_profile",
]

[project.optional-dependencies]
cpu = [
  "jax[cpu]==0.4.20"
]

tpu = [
  "jax[tpu]==0.4.20",
]
cuda12 = [
  "jax[cuda12_pip]==0.4.20",
]
